welcome.lessons.welcome.loopdowhile.Poucet.scala.error
Poucet:29: error: illegal start of simple expression
	}
        ^